<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_pattern_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clone"
        android:icon="@drawable/ic_copy"
        android:title="@string/button_clone"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_video"
        android:icon="@drawable/ic_export"
        android:title="@string/video_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/button_delete"
        app:showAsAction="never" />

</menu>